# Wildfire-Response

./: .env.example  .gitignore  README.md  guild.yml  insforge.schema.sql  metadata.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.cursor/: mcp.json
.playwright-mcp/: page-2026-04-24T21-55-58-269Z.yml  page-2026-04-24T21-56-30-638Z.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/evidence/: page.tsx
app/household/: page.tsx
app/plan/: page.tsx
app/voice/: page.tsx
components/: ActionTimeline.tsx  AppShell.tsx  ApprovalQueue.tsx  DashboardCards.tsx  DiscoveredSources.tsx  FamilyBoard.tsx  HouseholdOnboarding.tsx  IncidentMap.tsx  ProofVault.tsx  ResourceCards.tsx  VoiceCommandCenter.tsx
docs/: vapi-assistant.md
hooks/: use-mobile.ts
infra/cosmo/: compose.yaml  docker-compose.yml  router.yaml  start.sh
lib/: demo-data.ts  insforge.ts  runtime-store.ts  server-dashboard.ts  store.tsx  types.ts
lib/services/: ghost.ts  guild.ts  insforge-persist.ts  insforge-repository.ts  tinyfish.ts  vapi.ts  wildfire-monitor.ts
scripts/: test_coordinator.py
src/agents/: README.md
src/config/: __init__.py  settings.py
src/coordinator/: __init__.py  agent.py  agent_pipeline.py  code_generator.py  prompts.py
src/cosmo/: __init__.py  schema_generator.py  subgraph_registry.py
src/db/: __init__.py  ghost_client.py  schema.sql
src/templates/: __init__.py  coded_agent_template.py  llm_agent_template.py
tests/: conftest.py  test_agent_pipeline.py  test_code_generator.py
(+14 files in other folders)
