[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-agents"
version = "0.1.0"
description = "Agent marketplace platform - Coordinator powered by Deep Agents + Fireworks GLM-5.1"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain-fireworks",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
